# csda-client

./: .release-please-manifest.json  AGENTS.md  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.claude/skills/: csda.md
.claude/skills/csda/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yaml  docs.yaml  pr-lint.yaml  release-please.yaml  release-please.yml
0.1.0/: 404.html  index.html  objects.inv  sitemap.xml
0.1.0/api/: index.html
0.1.0/api/models/: index.html
0.1.0/examples/satellogic_search_download/: index.html
0.1.0/examples/search-and-download/: index.html
0.1.0/examples/tasking/: index.html
0.1.0/hooks/config/: index.html
0.1.0/search/: search_index.json
docs/: client.ipynb  download.ipynb  index.md  search-and-download.ipynb  tasking.ipynb
docs/api/: index.md  models.md
docs/examples/: satellogic_search_download.ipynb  search-and-download.ipynb  tasking.ipynb
docs/hooks/: config.py
src/csda_client/: __init__.py  cli.py  client.py  models.py
src/csda_client/skills/: __init__.py  csda.md
tests/: conftest.py  test_cli.py  test_client.py
